# pyfacl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: lint.yml  tests.yml
docs/: Makefile  conf.py  index.md
pyfacl/: __init__.py  cli.py  logger.py  pyfacl.py  pyfacl_has.py  pyfacl_trace.py
tests/: conftest.py  test_ci_environment.py  test_cli_has.py  test_cli_trace.py  test_has_permission.py  test_pyfacl.py  test_pyfacl_has.py  test_pyfacl_production.py  test_pyfacl_trace.py
